{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 384,
  "lineage": "8f498bf4-722a-abc1-e469-528b8a773460",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "query-srvc-aza-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01361d3186814b895",
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:instance/i-0a125d9cbc519a033",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a125d9cbc519a033",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fa9fcf80c9839b33"
              }
            ],
            "primary_network_interface_id": "eni-0fa9fcf80c9839b33",
            "private_dns": "ip-10-0-102-62.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.62",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08a58d4acdf602616",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-036a8c692cc2450fb",
            "tags": {
              "Name": "query-service-instance-a"
            },
            "tags_all": {
              "Name": "query-service-instance-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b36231f93f62684",
              "sg-0c6e5db1884050103",
              "sg-0de5c8b278f591554"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "i-0a125d9cbc519a033",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.icmp",
            "aws_security_group.query-instance-sg",
            "aws_security_group.ssh",
            "aws_subnet.terprovd-prv1-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "query-srvc-azb-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01361d3186814b895",
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:instance/i-0a4376e3f90cc0a9b",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a4376e3f90cc0a9b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01e76371c8a5fa96b"
              }
            ],
            "primary_network_interface_id": "eni-01e76371c8a5fa96b",
            "private_dns": "ip-10-0-103-63.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.103.63",
            "region": "ap-southeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0753e2a8918a378fb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad74d21c4b2afa30",
            "tags": {
              "Name": "query-service-instance-b"
            },
            "tags_all": {
              "Name": "query-service-instance-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b36231f93f62684",
              "sg-0c6e5db1884050103",
              "sg-0de5c8b278f591554"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "i-0a4376e3f90cc0a9b",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.icmp",
            "aws_security_group.query-instance-sg",
            "aws_security_group.ssh",
            "aws_subnet.terprovd-prv2-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terprovd-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:internet-gateway/igw-01cb7741174f80e5d",
            "id": "igw-01cb7741174f80e5d",
            "owner_id": "005716755011",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "terprovd-igw"
            },
            "tags_all": {
              "Name": "terprovd-igw"
            },
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "services-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/services-lb/b0e5b13e50e6fa03",
            "arn_suffix": "app/services-lb/b0e5b13e50e6fa03",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-services-lb-1462926856.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/services-lb/b0e5b13e50e6fa03",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "services-lb",
            "preserve_host_header": false,
            "region": "ap-southeast-2",
            "security_groups": [
              "sg-019dda864accb7152"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036a8c692cc2450fb"
              },
              {
                "subnet_id": "subnet-0ad74d21c4b2afa30"
              }
            ],
            "subnets": [
              "subnet-036a8c692cc2450fb",
              "subnet-0ad74d21c4b2afa30"
            ],
            "vpc_id": "vpc-0ab7b525c102f8a35",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/services-lb/b0e5b13e50e6fa03"
          },
          "dependencies": [
            "aws_security_group.services-lb-sg",
            "aws_subnet.terprovd-prv1-subnet",
            "aws_subnet.terprovd-prv2-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "websrvr-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/websrvr-lb/1acb0dbdc9bda64b",
            "arn_suffix": "app/websrvr-lb/1acb0dbdc9bda64b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "websrvr-lb-1909326864.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/websrvr-lb/1acb0dbdc9bda64b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "websrvr-lb",
            "preserve_host_header": false,
            "region": "ap-southeast-2",
            "security_groups": [
              "sg-08e30320137164f4b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b3c703a262185cb1"
              },
              {
                "subnet_id": "subnet-0d57587867ff26ed4"
              }
            ],
            "subnets": [
              "subnet-0b3c703a262185cb1",
              "subnet-0d57587867ff26ed4"
            ],
            "vpc_id": "vpc-0ab7b525c102f8a35",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/websrvr-lb/1acb0dbdc9bda64b"
          },
          "dependencies": [
            "aws_security_group.websrvr-lb-sg",
            "aws_subnet.terprovd-pub1-subnet",
            "aws_subnet.terprovd-pub2-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "services-lb-l",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener/app/services-lb/b0e5b13e50e6fa03/9ceda29b40d5b451",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/querysrvc-lb-tg/15fe90623de6b8ae",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener/app/services-lb/b0e5b13e50e6fa03/9ceda29b40d5b451",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/services-lb/b0e5b13e50e6fa03",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener/app/services-lb/b0e5b13e50e6fa03/9ceda29b40d5b451"
          },
          "dependencies": [
            "aws_lb.services-lb",
            "aws_lb_target_group.querysrvc-lb-tg",
            "aws_security_group.services-lb-sg",
            "aws_subnet.terprovd-prv1-subnet",
            "aws_subnet.terprovd-prv2-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "websrvr-lb-l",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener/app/websrvr-lb/1acb0dbdc9bda64b/09c94f67e1667d8f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/websrvr-lb-tg/553efa69d86dbfab",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener/app/websrvr-lb/1acb0dbdc9bda64b/09c94f67e1667d8f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/websrvr-lb/1acb0dbdc9bda64b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener/app/websrvr-lb/1acb0dbdc9bda64b/09c94f67e1667d8f"
          },
          "dependencies": [
            "aws_lb.websrvr-lb",
            "aws_lb_target_group.websrvr-lb-tg",
            "aws_security_group.websrvr-lb-sg",
            "aws_subnet.terprovd-pub1-subnet",
            "aws_subnet.terprovd-pub2-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "services-lb-l-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/procsrvc-lb-tg/190399949a9ed80c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener-rule/app/services-lb/b0e5b13e50e6fa03/9ceda29b40d5b451/f701f89426b6f7d4",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/process/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener-rule/app/services-lb/b0e5b13e50e6fa03/9ceda29b40d5b451/f701f89426b6f7d4",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener/app/services-lb/b0e5b13e50e6fa03/9ceda29b40d5b451",
            "priority": 10,
            "region": "ap-southeast-2",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:listener-rule/app/services-lb/b0e5b13e50e6fa03/9ceda29b40d5b451/f701f89426b6f7d4"
          },
          "dependencies": [
            "aws_lb.services-lb",
            "aws_lb_listener.services-lb-l",
            "aws_lb_target_group.procsrvc-lb-tg",
            "aws_lb_target_group.querysrvc-lb-tg",
            "aws_security_group.services-lb-sg",
            "aws_subnet.terprovd-prv1-subnet",
            "aws_subnet.terprovd-prv2-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "procsrvc-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/procsrvc-lb-tg/190399949a9ed80c",
            "arn_suffix": "targetgroup/procsrvc-lb-tg/190399949a9ed80c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "6969",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/procsrvc-lb-tg/190399949a9ed80c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/services-lb/b0e5b13e50e6fa03"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "procsrvc-lb-tg",
            "port": 6969,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/procsrvc-lb-tg/190399949a9ed80c"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "querysrvc-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/querysrvc-lb-tg/15fe90623de6b8ae",
            "arn_suffix": "targetgroup/querysrvc-lb-tg/15fe90623de6b8ae",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "7070",
                "protocol": "HTTP",
                "timeout": 4,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/querysrvc-lb-tg/15fe90623de6b8ae",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/services-lb/b0e5b13e50e6fa03"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "querysrvc-lb-tg",
            "port": 7070,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/querysrvc-lb-tg/15fe90623de6b8ae"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "websrvr-lb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/websrvr-lb-tg/553efa69d86dbfab",
            "arn_suffix": "targetgroup/websrvr-lb-tg/553efa69d86dbfab",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/websrvr-lb-tg/553efa69d86dbfab",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:loadbalancer/app/websrvr-lb/1acb0dbdc9bda64b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "websrvr-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/websrvr-lb-tg/553efa69d86dbfab"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "services-lb-tg-attachment-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/querysrvc-lb-tg/15fe90623de6b8ae-2025100212055404820000000c",
            "port": 7070,
            "region": "ap-southeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/querysrvc-lb-tg/15fe90623de6b8ae",
            "target_id": "i-0a125d9cbc519a033"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.query-srvc-aza-ec2",
            "aws_key_pair.deployer",
            "aws_lb_target_group.querysrvc-lb-tg",
            "aws_security_group.icmp",
            "aws_security_group.query-instance-sg",
            "aws_security_group.ssh",
            "aws_subnet.terprovd-prv1-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "services-lb-tg-attachment-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/querysrvc-lb-tg/15fe90623de6b8ae-2025100212055418850000000d",
            "port": 7070,
            "region": "ap-southeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:005716755011:targetgroup/querysrvc-lb-tg/15fe90623de6b8ae",
            "target_id": "i-0a4376e3f90cc0a9b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.query-srvc-azb-ec2",
            "aws_key_pair.deployer",
            "aws_lb_target_group.querysrvc-lb-tg",
            "aws_security_group.icmp",
            "aws_security_group.query-instance-sg",
            "aws_security_group.ssh",
            "aws_subnet.terprovd-prv2-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terprovd-private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:route-table/rtb-07eb129ae86f63702",
            "id": "rtb-07eb129ae86f63702",
            "owner_id": "005716755011",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [],
            "tags": {
              "Name": "terprovd-private-rt"
            },
            "tags_all": {
              "Name": "terprovd-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "rtb-07eb129ae86f63702",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terprovd-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:route-table/rtb-0f9e35781f6aa148e",
            "id": "rtb-0f9e35781f6aa148e",
            "owner_id": "005716755011",
            "propagating_vgws": [],
            "region": "ap-southeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01cb7741174f80e5d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terprovd-public-rt"
            },
            "tags_all": {
              "Name": "terprovd-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "rtb-0f9e35781f6aa148e",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.terprovd-igw",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terprovd-private-rt-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08786c9d8a7b1f064",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07eb129ae86f63702",
            "subnet_id": "subnet-036a8c692cc2450fb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.terprovd-private-rt",
            "aws_subnet.terprovd-prv1-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terprovd-private-rt-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d54e95258b1b4f7f",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-07eb129ae86f63702",
            "subnet_id": "subnet-0ad74d21c4b2afa30"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.terprovd-private-rt",
            "aws_subnet.terprovd-prv2-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terprovd-public-rt-assoc-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094db207a6efa0331",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0f9e35781f6aa148e",
            "subnet_id": "subnet-0b3c703a262185cb1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terprovd-igw",
            "aws_route_table.terprovd-public-rt",
            "aws_subnet.terprovd-pub1-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terprovd-public-rt-assoc-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01bfb1c59a3197da7",
            "region": "ap-southeast-2",
            "route_table_id": "rtb-0f9e35781f6aa148e",
            "subnet_id": "subnet-0d57587867ff26ed4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.terprovd-igw",
            "aws_route_table.terprovd-public-rt",
            "aws_subnet.terprovd-pub2-subnet",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:security-group/sg-0c6e5db1884050103",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c6e5db1884050103",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "allow-icmp-sg",
            "name_prefix": "",
            "owner_id": "005716755011",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "sg-0c6e5db1884050103",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "processing-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:security-group/sg-0ff891b32b2d66efc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ff891b32b2d66efc",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 6969,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6969
              }
            ],
            "name": "processing-instance-sg",
            "name_prefix": "",
            "owner_id": "005716755011",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "sg-0ff891b32b2d66efc",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "query-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:security-group/sg-0de5c8b278f591554",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0de5c8b278f591554",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 7070,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 7070
              }
            ],
            "name": "query-instance-sg",
            "name_prefix": "",
            "owner_id": "005716755011",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "sg-0de5c8b278f591554",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "services-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:security-group/sg-019dda864accb7152",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019dda864accb7152",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "services-lb-sg",
            "name_prefix": "",
            "owner_id": "005716755011",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "sg-019dda864accb7152",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:security-group/sg-02b36231f93f62684",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02b36231f93f62684",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-sg",
            "name_prefix": "",
            "owner_id": "005716755011",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "sg-02b36231f93f62684",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "websrvr-lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:security-group/sg-08e30320137164f4b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e30320137164f4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "websrvr-lb-sg",
            "name_prefix": "",
            "owner_id": "005716755011",
            "region": "ap-southeast-2",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "sg-08e30320137164f4b",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "icmp-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": -1,
            "id": "sgrule-2316942886",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "icmp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0c6e5db1884050103",
            "security_group_rule_id": "sgr-0c564f109e305eded",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.icmp",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "processing-instance-sg-r-all-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-272657428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0ff891b32b2d66efc",
            "security_group_rule_id": "sgr-01d3b147f739871d7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.processing-instance-sg",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "processing-instance-sg-r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 6969,
            "id": "sgrule-1197398904",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0ff891b32b2d66efc",
            "security_group_rule_id": "sgr-03a42a5d0f994cfce",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6969,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.processing-instance-sg",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "query-instance-sg-r-all-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2874965371",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0de5c8b278f591554",
            "security_group_rule_id": "sgr-000da002a5286a1dc",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.query-instance-sg",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "query-instance-sg-r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 7070,
            "id": "sgrule-3289149718",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-0de5c8b278f591554",
            "security_group_rule_id": "sgr-0a409b9020ee7fb5c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 7070,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.query-instance-sg",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "services-lb-sg-r-all-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-674446582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-2",
            "security_group_id": "sg-019dda864accb7152",
            "security_group_rule_id": "sgr-0601893d6e4db3591",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.services-lb-sg",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "services-lb-sg-r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1088721669",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-019dda864accb7152",
            "security_group_rule_id": "sgr-04df2659686dcbdac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.services-lb-sg",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ssh-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-588986693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-02b36231f93f62684",
            "security_group_rule_id": "sgr-0b0d33407c3d07aac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ssh",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "websrvr-lb-sg-r-all-out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3022516668",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-southeast-2",
            "security_group_id": "sg-08e30320137164f4b",
            "security_group_rule_id": "sgr-0e4459deccb27dce0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.websrvr-lb-sg",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "websrvr-lb-sg-r1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1349370858",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-southeast-2",
            "security_group_id": "sg-08e30320137164f4b",
            "security_group_rule_id": "sgr-0a80ef7230a41d9f8",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.websrvr-lb-sg",
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terprovd-prv1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:subnet/subnet-036a8c692cc2450fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036a8c692cc2450fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005716755011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "terprovd-private1-subnet"
            },
            "tags_all": {
              "Name": "terprovd-private1-subnet"
            },
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "subnet-036a8c692cc2450fb",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terprovd-prv2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:subnet/subnet-0ad74d21c4b2afa30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad74d21c4b2afa30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "005716755011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "terprovd-private2-subnet"
            },
            "tags_all": {
              "Name": "terprovd-private2-subnet"
            },
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "subnet-0ad74d21c4b2afa30",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terprovd-pub1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:subnet/subnet-0b3c703a262185cb1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3c703a262185cb1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005716755011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "terprovd-public1-subnet"
            },
            "tags_all": {
              "Name": "terprovd-public1-subnet"
            },
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "subnet-0b3c703a262185cb1",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terprovd-pub2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:subnet/subnet-0d57587867ff26ed4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d57587867ff26ed4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "005716755011",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "terprovd-public2-subnet"
            },
            "tags_all": {
              "Name": "terprovd-public2-subnet"
            },
            "vpc_id": "vpc-0ab7b525c102f8a35"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "005716755011",
            "id": "subnet-0d57587867ff26ed4",
            "region": "ap-southeast-2"
          },
          "dependencies": [
            "aws_vpc.terprovd-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terprovd-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:005716755011:vpc/vpc-0ab7b525c102f8a35",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-086e6013e0e390295",
            "default_route_table_id": "rtb-07b2d2eeb0b4234b7",
            "default_security_group_id": "sg-0100604cc1d0b267e",
            "dhcp_options_id": "dopt-05309ea673c2029ad",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ab7b525c102f8a35",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07b2d2eeb0b4234b7",
            "owner_id": "005716755011",
            "region": "ap-southeast-2",
            "tags": {
              "Name": "terprovd-vpc"
            },
            "tags_all": {
              "Name": "terprovd-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}